# tableTK

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  dist.c  dist.c2  dist_par.c  filter_table.c  filter_table.h  ktable.c  ktable.h
test/: CMakeLists.txt  test.c  test.sh
test/data/: small.tab  wide50.tab
